dataset1235/2025-2/1379599236/users/3662229893/executions/2277843042_704983377.log
== RUN (2025-08-27 18:49:23)
-- CODE: 
x = int(input("informe um numero: "))
y = int(input("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
7.0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
1.6
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
2.0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
26.5
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
173.0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
173.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:46:32)
-- CODE: 
x = int(input("informe um numero: "))
y = int(input("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
7.0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
1.6
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
2.0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
26.5
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
173.0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
173.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:48:11)
-- CODE: 
x = int(input("informe um numero: "))
y = int(input("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
7.0
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
1.6
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
2.0
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
26.5
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
173.0
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
173.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:57:22)
-- CODE: 
x = (input("informe um numero: "))
y = (INPUT("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 18:35:58)
-- CODE: 
x = (input("informe um numero: "))
y = (input("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    divisao_inteira = x//y
                      ~^^~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    divisao_inteira = x//y
                      ~^^~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    divisao_inteira = x//y
                      ~^^~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    divisao_inteira = x//y
                      ~^^~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    divisao_inteira = x//y
                      ~^^~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    divisao_inteira = x//y
                      ~^^~
TypeError: unsupported operand type(s) for //: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:57:40)
-- CODE: 
x = (input("informe um numero: "))
y = (INPUT("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:57:25)
-- CODE: 
x = (input("informe um numero: "))
y = (INPUT("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:57:42)
-- CODE: 
x = (input("informe um numero: "))
y = (INPUT("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 18:55:57)
-- CODE: 
x = int(input("informe um numero: "))
y = int(input("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
multiplicacao = x*y
divisao_realy = x/y
potencia = y**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
print(multiplicacao)
print(potencia)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 18:57:26)
-- CODE: 
x = (input("informe um numero: "))
y = (INPUT("Informe outro numero: "))

divisao_inteira = x//y
resto_divisao_inteira = x%y

divisao_real = x/y
divisao_realy = x/y
potencia = x**3

print(divisao_inteira)
print(resto_divisao_inteira)
print(divisao_real)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    y = (INPUT("Informe outro numero: "))
         ^^^^^
NameError: name 'INPUT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
